--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "regenerator-runtime": "0.13.7",
     "request": "2.88.2",
     "sha256-file": "1.0.0",
-    "sql.js": "1.5.0",
+    "sql.js": "pastelnetwork/sql.js#230351f",
     "typeface-roboto": "0.0.75",
     "underscore": "1.9.2",
     "uuid": "8.3.2",
