--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "5.12.0",
+    "@hookform/resolvers": "^2.5.0",
     "@hot-loader/react-dom": "17.0.1",
     "@react-pdf/renderer": "2.0.0",
     "@reduxjs/toolkit": "1.5.1",
@@ -56,6 +57,7 @@
     "react-accessible-accordion": "3.3.4",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.1",
+    "react-hook-form": "^7.5.3",
     "react-hot-loader": "4.13.0",
     "react-modal": "3.11.1",
     "react-redux": "7.2.3",
@@ -77,7 +79,8 @@
     "typeface-roboto": "0.0.75",
     "underscore": "1.9.2",
     "uuid": "8.3.2",
-    "ws": "7.2.1"
+    "ws": "7.2.1",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "7.13.14",
