--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@hot-loader/react-dom": "17.0.1",
     "@react-pdf/renderer": "2.0.0",
     "@reduxjs/toolkit": "1.5.1",
+    "@types/react-datepicker": "^3.1.8",
     "as-table": "1.0.55",
     "autoprefixer": "10.2.5",
     "axios": "0.21.1",
@@ -69,6 +70,7 @@
     "react": "17.0.1",
     "react-accessible-accordion": "3.3.4",
     "react-circular-progressbar": "2.0.4",
+    "react-datepicker": "4.1.1",
     "react-dom": "17.0.1",
     "react-hot-loader": "4.13.0",
     "react-modal": "3.11.1",
